added model objects

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -35,7 +35,12 @@
     "dataSource": "db",
     "public": false
   },
-  "Note": {
-    "dataSource": "db"
+  "people": {
+    "dataSource": "db",
+    "public": true
+  },
+  "phoneNumbers" : {
+    "dataSource" : "db",
+    "public": true
   }
 }
