findByname and findBysurname added

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -37,7 +37,14 @@
   },
   "people": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "findByName": true
+        }
+      }
+    }
   },
   "phoneNumbers" : {
     "dataSource" : "db",
